--- a/Terraform/Modules/compute/slave_user_data.sh.tmpl
+++ b/Terraform/Modules/compute/slave_user_data.sh.tmpl
@@ -34,6 +34,8 @@ usermod -aG docker ubuntu
 curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o kubectl
 chmod +x kubectl
 sudo mv kubectl /usr/local/bin/kubectl
+####Install helm###
+curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
 
 ##########################################
 # Wait for Jenkins master to accept connections
