--- a/Terraform/Modules/compute/slave_user_data.sh.tmpl
+++ b/Terraform/Modules/compute/slave_user_data.sh.tmpl
@@ -26,7 +26,7 @@ apt-get install -y apt-transport-https ca-certificates software-properties-commo
 curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
 add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
 apt-get update
-apt-get install -y docker-ce docker-ce-cli containerd.io
+apt-get install -y docker-ce docker-ce-cli containerd.io python3.8-venv
 usermod -aG docker ubuntu
 
 
